<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mad Practical</string>
    <string name="practical_1">Practical 1</string>
    <string name="practical_2">Practical 2</string>
    <string name="practical_3">Practical 3</string>
    <string name="practical_4">Practical 4</string>
    <string name="practical_5">Practical 5</string>
    <string name="practical_6">Practical 6</string>
    <string name="practical_7">Practical 7</string>
    <string name="practical_8">Practical 8</string>
    <string name="practical_9">Practical 9</string>
    <string name="practical_10">Practical 10</string>
    <string name="practical_11">Practical 11</string>
    <string name="Co512">Practical logo</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register">Don\'t have account? Register Here</string>
    <string name="remember">Remember me</string>
    <string name="blank"></string>
    <string name="linearlayout">Linear Layout</string>
    <string name="relativelayout">Relative Layout</string>
    <string name="tablelayout">Table Layout</string>
    <string name="save">SAVE</string>
    <string name="add_info">Add Student Info</string>
    <string name="contact">ID</string>
    <string name="name">Name</string>
    <string name="view_head">Student Details</string>
    <string name="nothing">No Data</string>
    <string name="view">VIEW</string>
    <string name="enter_id">Enter Student ID</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="okay">OKAY</string>
    <string name="delete">Delete</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="siddharth">Siddharth</string>
    <string name="recycler_view">Recycler view</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="exit">Exit</string>
    <string name="settings_text_select_theme">Select Theme:</string>
    <string name="settings_text_credentials">Credentials</string>
    <string name="settings_text_username_hint">username</string>
    <string name="settings_text_password_hint">password</string>
    <string name="settings_text_sync_automatically">Sync automatically</string>
    <string name="settings_text_location">Location</string>
    <string name="settings_text_state_on">On</string>
    <string name="settings_text_state_off">Off</string>
    <string name="settings_text_clear_data">Clear Data</string>
    <string-array name="theme_array">
        <item>Material-Light</item>
        <item>Console</item>
        <item>Navy</item>
    </string-array>
    <string name="update">update</string>
    <string name="broad_cast_text">--This BroadcastReceiver Receives--\nBoot completed\nInternet Connectivity changed\nPower Connected\nAirplane Mode Changed\nand Battery Level.</string>
    <string name="current_location">Current Location</string>
    <string name="animation">Animation</string>
    <string name="use_of_system">Use System</string>

    <!-- wifi -->
    <string name="about">About</string>
    <string name="rescan">Rescan</string>
    <string name="ok">Ok</string>

    <string name="close">Close</string>
    <string name="send_me_bugs_msg">If you find some error, or you have comments or
        suggestions, please send me an email.</string>
    <string name="homepage_msg">Homepage:
        http://github.com/neoriddle/wifi-scanner</string>
    <string name="version_msg">Version %s</string>
    <string name="description_project_msg">Wifi Scanner is a simple project, intents to be
        a simple wifi-networks scanner.\nBut this project is in
        progress, so if you have ideas to make grow up, we can include
        them.</string>
    <string name="email_msg">Email: israel.buitron@gmail.com</string>
    <string name="credits_msg">Credits:\nProject Leader: Israel Buitron
    </string>

    <string name="ssid_msg">SSID: %s</string>
    <string name="bssid_msg">BSSID: %s</string>
    <string name="capabilities_msg">Capabilities: %s</string>
    <string name="frecuency_msg">Frecuency: %s MHz</string>
    <string name="signal_level_msg">Signal Level: %s</string>

    <string name="wifi_is_not_enabled_msg">WiFi is not enabled</string>
    <string name="wifi_disabling_msg">WiFi is currently being disabling</string>
    <string name="wifi_disabled_msg">WiFi is disabled</string>
    <string name="wifi_enabling_msg">WiFi is currently being enabling</string>
    <string name="wifi_enabled_msg">WiFi is enabled</string>
    <string name="wifi_unknown_state_msg">WiFi is in an unknown state</string>
    <string name="networks_found_msg">%d networks found</string>
</resources>