<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title=""
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_white_more_vert"
        android:id="@+id/vec">
        <menu>
            <item
                app:showAsAction="never"
                android:id="@+id/home"
                android:icon="@drawable/ic_baseline_home"
                android:title="@string/home"
                />
            <item
                app:showAsAction="never"
                android:icon="@drawable/ic_baseline_account"
                android:title="@string/profile"
                android:id="@+id/profile"
                />
            <item
                app:showAsAction="never"
                android:icon="@drawable/ic_baseline_exit"
                android:title="@string/exit"
                android:id="@+id/exit"/>
        </menu>
    </item>
</menu>