<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    tools:context=".Practical_2b">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/Co512"
        app:srcCompat="@drawable/co_512" />

    <TextView
        android:id="@+id/errorTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="8dp"
        android:text="@string/blank"
        android:textColor="#ff0000"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/errorTxtView"
        android:layout_centerHorizontal="true"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_username"
        android:drawableLeft="@drawable/ic_action_username"
        android:ems="10"
        android:hint="@string/username_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="#fff"
        android:textColorHint="#9e9e9e"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/editTextTextPersonName"
        android:background="#11000000"
        android:drawableStart="@drawable/ic_action_password"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#fff"
        android:textColorHint="#9e9e9e"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextPassword"
        android:layout_alignStart="@id/editTextTextPassword"
        android:text="@string/remember"
        android:textColor="#9e9e9e"
        android:textSize="20sp"
        android:layout_alignLeft="@id/editTextTextPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_background"
        android:onClick="ValidInput"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="24sp"
        app:backgroundTint="#FA46E8" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:text="@string/register" />
</RelativeLayout>