<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:onClick="Practical_1"
                android:text="@string/practical_1"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:onClick="Practical_2"
                android:text="@string/practical_2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/practical_3"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:onClick="Practical_4"
                android:text="@string/practical_4"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:onClick="Practical_5"
                android:text="@string/practical_5"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:onClick="Practical_6"
                android:text="@string/practical_6"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:onClick="Practical_7"
                android:text="@string/practical_7"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:onClick="Practical_8"
                android:text="@string/practical_8"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:onClick="bluetooth"
                android:text="Bluetooth"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:onClick="wifi_strength"
                android:text="Wifi strength"
                android:textSize="24sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:onClick="Practical_9"
                android:text="About"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>