<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="125dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/siddharth"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/contact_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginLeft="20dp"
        android:text="180170107030"
        android:textColor="#9e9e9e"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_id"
        android:layout_marginLeft="20dp"
        android:text="gabu@gmail.com"
        android:textColor="#9e9e9e"
        android:textSize="20sp" />

    <Button
        android:id="@+id/update"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:text="@string/update" />

    <Button
        android:id="@+id/delete"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/delete" />

</RelativeLayout>